[gd_scene load_steps=2 format=3 uid="uid://cbcvkvns14ftn"]

[ext_resource type="Script" path="res://addons/opera_sdk/UI/VersionEditor.gd" id="1"]

[node name="VersionEditor" type="HBoxContainer"]
script = ExtResource("1")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Version"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Major" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Minor" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Build" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Revision" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[connection signal="text_changed" from="HBoxContainer/Major" to="." method="_on_Major_text_changed"]
[connection signal="text_changed" from="HBoxContainer/Minor" to="." method="_on_Minor_text_changed"]
[connection signal="text_changed" from="HBoxContainer/Build" to="." method="_on_Build_text_changed"]
[connection signal="text_changed" from="HBoxContainer/Revision" to="." method="_on_Revision_text_changed"]
